--- a/battleship.html
+++ b/battleship.html
@@ -32,6 +32,8 @@
                 The player clicks at random hoping to take <br>the opponents ships down (the PC's board)<br><br>
                 You can change the placement of your ships<br> <br>When you start your turn
                 the game will automatically start! <br>
+                A player will only win if they take out <br>all of the opponents ships. 
+                (17 ships)
                 <br><br><br></p>
                 <img src="pink-star.png" width="90px">
         </div>
