--- a/battleship.html
+++ b/battleship.html
@@ -30,8 +30,8 @@
             <h5> Rules of the game :</h5>
             <p id="modal-messagep"> There are 17 ships on each board. <br><br>
                 The player clicks at random hoping to take <br>the opponents ships down (the PC's board)<br><br>
-                You can change the placement of your ships<br> <br>When you start your turn
-                the game will automatically start! <br>
+                You can change the placement of your ships<br> <br>When you start your turn,
+                the game will<br> automatically start! <br><br><br>
                 A player will only win if they take out <br>all of the opponents ships. 
                 (17 ships)
                 <br><br><br></p>
